--- a/Front-End/src/app/modules/directory/components/directory-info/directory-info.component.html
+++ b/Front-End/src/app/modules/directory/components/directory-info/directory-info.component.html
@@ -6,7 +6,7 @@
                 <img class="profile-user-img img-fluid img-circle" src="../../../../../assets/img/default.png" alt="User profile picture">
               </div>
 
-              <h3 class="profile-username text-center">{{item.names}} {{item.lastName}}</h3>
+              <h3 class="profile-username text-center">{{item.firstName}} {{item.lastName}}</h3>
 
               <p class="text-muted text-center">Telephone numbers</p>
 
@@ -15,10 +15,8 @@
                   <b>telephone-{{i + 1}}</b> <a class="float-right">{{tel.telephoneNumber}}</a>
                 </li>
               </ul>
-
-              <a href="" class="btn btn-primary btn-block btn-sm"><b>Edit</b></a>
             </div>
             <!-- /.card-body -->
           </div>
-    </div>
+    </div>  
 </div>
