--- a/Front-End/src/app/shared/navbar/navbar.component.html
+++ b/Front-End/src/app/shared/navbar/navbar.component.html
@@ -17,14 +17,14 @@
             <a href="#/directory/info" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Catalog Numbers</a>
+            <a href="#/directory-actions" class="nav-link">Contacts</a>
           </li>
         </ul>
 
         <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
           <li class="nav-item">
             <a class="nav-link" data-toggle="dropdown" >
-                User: {{_menuService.displayName}}
+                Username: {{_menuService.username}}
             </a>
           </li>
           <li class="nav-item">
