--- a/Front-End/src/app/modules/auth/components/login.component.html
+++ b/Front-End/src/app/modules/auth/components/login.component.html
@@ -3,11 +3,9 @@
         
         <div class="card" style="width: 320px; margin: auto;">
             <div class="card-body login-card-body mt-4 mb-2">
-                <img src="../../assets/dist/img/jbl.png" style="width: 12rem; display: block; margin: auto;" alt="logo jabil">
                 
-                <div class="login-logo mt-3 mb-3" style="font-size:x-large">
-                    <!-- <h4>SerialCheck</h4> -->
-                    <img src="../../../../assets/img/Logo-Black-V2.png" alt="logo" style="width:8rem; margin-bottom: 8px;">
+                <div class="login-logo mt-3 mb-5" style="font-size:x-large">
+                  <h2>Directory sistem</h2>
                 </div>
         
                 <form id="form" [formGroup]="loginForm" (ngSubmit)="login()">
